--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
     sdk: flutter
   flutter_heatmap_calendar: ^1.0.5
   flutter_slidable: ^1.2.0
+  google_fonts: ^3.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.18.0
+  percent_indicator: ^4.2.2
   selectable_list: ^0.1.1
 
 dev_dependencies:
